--- a/UI_Proyecto3.ui
+++ b/UI_Proyecto3.ui
@@ -142,6 +142,44 @@
     </rect>
    </property>
   </widget>
+  <widget class="QPushButton" name="btnIQR">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>80</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Light</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>IQR</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnZ">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>120</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Segoe UI Light</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Punt. Z</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
